2. Change name project to Single Page CV

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "Single Page CV",
   "version": "0.1.0",
   "homepage": "https://github.com/axlwolf/Single-Page-CV",
   "license": "MIT",
